--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -22,7 +22,6 @@ jobs:
 
       - name: Verify formatting
         run: |
-          # fail if any file is not gofmt'd
           test -z "$(gofmt -l .)"
 
       - name: Vet
@@ -34,10 +33,16 @@ jobs:
       - name: Build (CLI)
         run: go build -o tmdb ./cmd/tmdb
 
-  docker-build:
-    name: Docker build
+  docker:
+    name: Docker build & (maybe) push to GHCR
     runs-on: ubuntu-latest
     needs: [go-ci]
+
+    # Needed to push to GHCR with GITHUB_TOKEN
+    permissions:
+      contents: read
+      packages: write
+
     steps:
       - name: Checkout
         uses: actions/checkout@v4
@@ -45,9 +50,31 @@ jobs:
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v3
 
-      - name: Docker build (no push)
+      # Login only on push to main (NOT on PRs)
+      - name: Log in to GHCR
+        if: github.event_name == 'push' && github.ref == 'refs/heads/main'
+        uses: docker/login-action@v3
+        with:
+          registry: ghcr.io
+          username: ${{ github.actor }}
+          password: ${{ secrets.GITHUB_TOKEN }}
+
+      # Creates useful tags automatically
+      # - PRs: build only (no push)
+      # - main: push tags: latest + sha
+      - name: Extract Docker metadata
+        id: meta
+        uses: docker/metadata-action@v5
+        with:
+          images: ghcr.io/${{ github.repository }}
+          tags: |
+            type=raw,value=latest,enable={{is_default_branch}}
+            type=sha,format=short
+
+      - name: Build (and push on main)
         uses: docker/build-push-action@v6
         with:
           context: .
-          push: false
-          tags: tmdb-cli:ci
+          push: ${{ github.event_name == 'push' && github.ref == 'refs/heads/main' }}
+          tags: ${{ steps.meta.outputs.tags }}
+          labels: ${{ steps.meta.outputs.labels }}
