--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -3,6 +3,8 @@ name: CI
 on:
   push:
     branches: ["main"]
+    tags:
+      - "v*"
   pull_request:
     branches: ["main"]
 
@@ -34,11 +36,10 @@ jobs:
         run: go build -o tmdb ./cmd/tmdb
 
   docker:
-    name: Docker build & (maybe) push to GHCR
+    name: Docker build & push (GHCR)
     runs-on: ubuntu-latest
     needs: [go-ci]
 
-    # Needed to push to GHCR with GITHUB_TOKEN
     permissions:
       contents: read
       packages: write
@@ -51,7 +52,7 @@ jobs:
         uses: docker/setup-buildx-action@v3
 
       # Login only on push to main (NOT on PRs)
-      - name: Log in to GHCR
+      - name: Login to GHCR
         if: github.event_name == 'push' && github.ref == 'refs/heads/main'
         uses: docker/login-action@v3
         with:
@@ -59,22 +60,25 @@ jobs:
           username: ${{ github.actor }}
           password: ${{ secrets.GITHUB_TOKEN }}
 
-      # Creates useful tags automatically
-      # - PRs: build only (no push)
-      # - main: push tags: latest + sha
       - name: Extract Docker metadata
         id: meta
         uses: docker/metadata-action@v5
         with:
           images: ghcr.io/${{ github.repository }}
           tags: |
+            # latest only on main branch
             type=raw,value=latest,enable={{is_default_branch}}
+
+            # semantic version from git tag (v0.1.0 → 0.1.0)
+            type=semver,pattern={{version}}
+
+            # short commit sha
             type=sha,format=short
 
-      - name: Build (and push on main)
+      - name: Build and push image
         uses: docker/build-push-action@v6
         with:
           context: .
-          push: ${{ github.event_name == 'push' && github.ref == 'refs/heads/main' }}
+          push: ${{ github.event_name == 'push' }}
           tags: ${{ steps.meta.outputs.tags }}
           labels: ${{ steps.meta.outputs.labels }}
